// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo component passes snapshot 1`] = `
<div>
  <div
    class="Todo"
    id="1"
  >
    <div>
      <b>
        test
      </b>
       
      <small>
        (priority: 
        1
        )
      </small>
    </div>
    <div>
      <small>
        moretest
      </small>
    </div>
  </div>
</div>
`;

exports[`Top todo component passes snapshot 1`] = `
<div>
  <div
    class="Todo"
    id="2"
  >
    <div>
      <b>
        Make dinner
      </b>
       
      <small>
        (priority: 
        1
        )
      </small>
    </div>
    <div>
      <small>
        Cook something healthy
      </small>
    </div>
  </div>
</div>
`;
